--- a/package.json
+++ b/package.json
@@ -26,17 +26,19 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.17.0",
     "config": "^3.2.4",
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6-alpha.6",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
+    "multer": "^1.4.2",
     "pg": "^7.12.1",
     "uuid": "^3.3.3"
   }
